assets/css/custom.css
/*--------------------------------------------------------------
This is your custom stylesheet.

Add your own styles here to make theme updates easier.
To override any styles from other stylesheets, simply copy them into here and edit away.

Make sure to respect the media queries! Otherwise you may
accidentally add desktop styles to the mobile layout.
https://www.w3schools.com/css/css_rwd_mediaqueries.asp
--------------------------------------------------------------*/

/* Global */

body {
	-webkit-font-smoothing:auto;
}

/* Avatars */
#groups-list .bfc-rounded  img.avatar,
.bb-activity img.avatar{
	border-radius:20%;
	}
.list-view .bb-forums__avatar .avatar{
	border-radius:20%;
	}
.notification-avatar img, .user-link img{
	border-radius:20%;
	}
#friend-list.item-list .item-avatar img, #members-list.item-list .item-avatar img{
	border-radius:20%;
	}
#bbpress-forums#bbpress-forums .bs-forums-items .item-avatar img{
	border-radius:20%;
	max-width: 80px;
	}

#bbpress-forums#bbpress-forums > .bs-forums-items .item-avatar img{
	/* border-radius:20%; */
	max-width: 40px;
	}
#bbpress-forums#bbpress-forums .bbp-topics1 .bs-item-wrap {
	padding: 10px 20px;
	border: none;
	
}

#bbpress-forums#bbpress-forums .bbp-topics1 .bs-header-item {
	margin-bottom: 10px;
	border-bottom: 1px solid #e7e9ec;
}

#bbpress-forums#bbpress-forums .bbp-topics1 .bs-item-list {
	margin-bottom: 10px;
	border-bottom: 1px solid #e7e9ec;
}

#bbpress-forums#bbpress-forums ul.bbp-topics1 {
	background-color: #fff;
	border: 1px solid #e7e9ec;
	padding-bottom: 10px;
}

#bbpress-forums#bbpress-forums .bbp-topics1.bs-forums-items .item-title {
    line-height: 18px;
}

#bbpress-forums#bbpress-forums .bbp-topics1.bs-forums-items .bfc-item-title {
    margin-right: 10px;
}

#bbpress-forums#bbpress-forums .bs-forums-items .item-meta .bs-replied {
    margin-right: 0px;
}

#bbpress-forums#bbpress-forums .bs-forums-items .bfc-item-meta>span {
    margin-right: 0px;
    margin-bottom: 0px;
    margin-top: 0px;
	margin-left: 0px;
    display: inline-block;
	font-size: 14px;
	color: rgb(163, 165, 169);
}

	
.entry-content-wrap .avatar, .avatar{
	border-radius:20%;
	}
body #buddypress:not(.round-avatars) .groups-header #item-header-cover-image #item-header-avatar img.avatar{
	border-radius:5%;
	}
body #buddypress:not(.round-avatars) .users-header #item-header-cover-image #item-header-avatar img.avatar{
	border-radius:20%;
	}
#groups-list.bp-list .avatar{
	border-radius:5%;
	}

.buddypress-wrap .members-list li .member-status.online {
	right:0px;
	top:0px;
	width:14px;
	height:14px;
	}

.comment-author .avatar {
	border-radius: 20%;
	max-width: 42px;
	}
/* Groups */

.single-item.groups .content-area {
	padding-top: 0px;
	}

nav#object-nav li.bfc-group-name-nav{
	font-size:14px;
	font-weight: 700;
	line-height: 28px;
	padding:11px 30px 11px 0;
	}


/* Forums and Group Member Intros*/

#members-intros,
#bbpress-forums.bb-content-area {
	width: 810px;
	margin: 0 auto;
}

#bbpress-forums .bs-single-forum-list>li .bs-reply-list-item {
	padding: 15px 30px 15px 0px;
}
#bbpress-forums#bbpress-forums .bs-forums-items .bbp-reply-author{
	width: 150px;
	/* margin-left: -30px; */
	padding: 0 20px;
}
#bbpress-forums h1.bb-reply-topic-title {
	font-size: 28px;
}
#bbpress-forums#bbpress-forums .bs-forums-items .bbp-reply-author .item-avatar {
	margin: auto;
	padding-bottom: 5px;
}


#bbpress-forums .bs-reply-list-item {
	display: flex;
}

.bbp-reply-content.bs-forum-content {
	font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
	font-size: 17px;
	line-height: 1.6;
	flex-grow: 1;
}
.bs-forum-content .bbp-topic-revision-log, .bs-forum-content .bbp-reply-revision-log{
	display: none;
}

#bbpress-forums#bbpress-forums .bs-forums-items.list-view .bs-dropdown-wrap .bs-dropdown-wrap-inner>a {
	float: right;
}

#bbpress-forums div.bbp-reply-content ul.bs-dropdown li, #bbpress-forums div.bbp-topic-content ul.bs-dropdown li {
	list-style-type: none;
}

.bs-dropdown {
	min-width: 100px;
 }
 
 #bbpress-forums#bbpress-forums .bs-forums-items.list-view .bs-dropdown-wrap .bs-dropdown-wrap-inner .bs-dropdown {
   width: 100px;
}



/* dropdown pane */

#buddypress .bb-grid  .dropdown-pane .generic-button, 
#buddypress .bp-list  .dropdown-pane .generic-button, 
#bfc-user-panels .dropdown-pane .generic-button, 
#bfc-user-accordion .dropdown-pane .generic-button {
	margin: 0;
}

#buddypress .bb-grid  .dropdown-pane .follow-button, 
#buddypress .bp-list .dropdown-pane .follow-button, 
#bfc-user-panels .dropdown-pane .follow-button, 
#bfc-user-accordion .dropdown-pane .follow-button {
	background: transparent;
	border: 0;
	border-radius: 0;
	box-shadow: none;
	color: #007CFF;
	line-height: 1.2;
	min-height: 1px;
	padding: 0;
	font-size: 14px;
	/* text-align: center; */
}
		
#buddypress .bb-grid .dropdown-pane, 
#buddypress .bp-list .dropdown-pane, 
#bfc-user-panels .dropdown-pane, 
#bfc-user-accordion .dropdown-pane {
	border-radius:10%;
	font-size: 14px;
	text-align: center;
	width: 150px;
	padding: 10px;
}

.bfc-dropdown-span {
	height: 40px;
}

/* member directory */
#members-group-list.group_members ul#members-list,
#members-dir-grid.members ul#members-list {
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
	grid-gap: 8px;
}

#friend-list.grid,#groups-list.grid,#members-list.grid{
	margin:0;
}

#friend-list.grid.bp-list>li,#groups-list.grid.bp-list>li,#members-list.grid.bp-list>li {
	max-width: 100%;
}

#members-group-list.group_members #members-list.bp-list:before,
#members-dir-grid.members #members-list.bp-list:before {
	content: normal;
	display: inherit;
}

#members-group-list.group_members #members-list.bp-list li.item-entry,
#members-dir-grid.members #members-list.bp-list li.item-entry {
	margin: 0;
	padding: 0;
	border-bottom: 0 none #000000;
	justify-self: center;
	min-width: min-content;
}
/* ... */

